# py-rttt

./: .gitignore  .mcp.json  .rttt.yaml  MCP.md  README.md  pyproject.toml
.github/workflows/: publish.yaml  publish.yml  test.yaml
rttt/: cli.py  console.py  event.py  mcp_server.py  shell_trust.py  ui.py  utils.py
rttt/connectors/: __init__.py  base.py  demo.py  file_log.py  mcp_server.py  middleware.py  pylink_rtt.py  substitution.py
tests/: test_config_load.py  test_mcp_server.py  test_pylink_rtt.py  test_shell_trust.py  test_substitution.py
